--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>HELLO HI</h1>
-    <p>hello all how are you , Good Morning </p>
+    <p>hello all how are you </p>
 </body>
 </body>
 </html>
