my resume details

--- a/index.html
+++ b/index.html
@@ -3,21 +3,21 @@
 <div class="container">
   <div class="header">
     <div class="full-name">
-      <span class="first-name">John</span> 
-      <span class="last-name">Doe</span>
+      <span class="first-name">Bharath</span> 
+      <span class="last-name">K M</span>
     </div>
     <div class="contact-info">
       <span class="email">Email: </span>
-      <span class="email-val">john.doe@gmail.com</span>
+      <span class="email-val">bharath.km0123@gmail.com</span>
       <span class="separator"></span>
       <span class="phone">Phone: </span>
-      <span class="phone-val">111-222-3333</span>
+      <span class="phone-val">7090023638</span>
     </div>
     
     <div class="about">
-      <span class="position">Front-End Developer </span>
+      <span class="position">Mainframe Operations</span>
       <span class="desc">
-        I am a front-end developer with more than 3 years of experience writing html, css, and js. I'm motivated, result-focused and seeking a successful team-oriented company with opportunity to grow. 
+        Mainframe Operator with the experience of around 1.8yrs in Mainframe Console monitoring and management and Batch cycle support. Ready to learn and apply new skills, looking for an challenging position in a progressive organization that will provide me an opportunity to learn new skills, which helps in my personal and professional growth. 
       </span>
     </div>
   </div>
@@ -27,24 +27,24 @@
       <div class="section__list">
         <div class="section__list-item">
           <div class="left">
-            <div class="name">KlowdBox</div>
-            <div class="addr">San Fr, CA</div>
-            <div class="duration">Jan 2011 - Feb 2015</div>
+            <div class="name">DXC</div>
+            <div class="addr">Commonwealth Bank Austrilia</div>
+            <div class="duration">July 2022 - Present</div>
           </div>
           <div class="right">
-            <div class="name">Fr developer</div>
-            <div class="desc">did This and that</div>
+            <div class="name">Mainframe Operations</div>
+            <div class="desc">Monitoring consoles and SRA</div>
           </div>
         </div>
                 <div class="section__list-item">
           <div class="left">
-            <div class="name">Akount</div>
-            <div class="addr">San Monica, CA</div>
-            <div class="duration">Jan 2011 - Feb 2015</div>
+            <div class="name">DXC</div>
+            <div class="addr">Commonwealth Bank Austrilia</div>
+            <div class="duration">July 2022 - Present</div>
           </div>
           <div class="right">
-            <div class="name">Fr developer</div>
-            <div class="desc">did This and that</div>
+            <div class="name">Devops</div>
+            <div class="desc">Got Training</div>
           </div>
         </div>
 
@@ -55,24 +55,19 @@
       <div class="section__list">
         <div class="section__list-item">
           <div class="left">
-            <div class="name">Sample Institute of technology</div>
-            <div class="addr">San Fr, CA</div>
-            <div class="duration">Jan 2011 - Feb 2015</div>
+            <div class="name">Nagarjuna Collage of Engineering and technology</div>
+            <div class="addr">Banglore</div>
+            <div class="duration">2018-2022</div>
           </div>
-          <div class="right">
-            <div class="name">Fr developer</div>
-            <div class="desc">did This and that</div>
-          </div>
-        </div>
-        <div class="section__list-item">
           <div class="left">
-            <div class="name">Akount</div>
-            <div class="addr">San Monica, CA</div>
-            <div class="duration">Jan 2011 - Feb 2015</div>
+            <div class="name">S R Pre University Collage</div>
+            <div class="addr">Hebri</div>
+            <div class="duration">2017-2018</div>
           </div>
-          <div class="right">
-            <div class="name">Fr developer</div>
-            <div class="desc">did This and that</div>
+          <div class="left">
+            <div class="name">Deeksha English high school</div>
+            <div class="addr">Kadur</div>
+            <div class="duration">2015-2016</div>
           </div>
         </div>
 
@@ -83,13 +78,13 @@
       <div class="section__title">Projects</div> 
        <div class="section__list">
          <div class="section__list-item">
-           <div class="name">DSP</div>
-           <div class="text">I am a front-end developer with more than 3 years of experience writing html, css, and js. I'm motivated, result-focused and seeking a successful team-oriented company with opportunity to grow.</div>
+           <div class="name">Commonwealth Bank Austrilia</div>
+           <div class="text">I am a mainframe operator  with more than 1 years of experience in tools like service now, SRA contol M,OPC, Enote, mainfrme consoles, netview . I'm motivated, result-focused and seeking a successful team-oriented company with opportunity to grow.</div>
          </div>
          
          <div class="section__list-item">
-                    <div class="name">DSP</div>
-           <div class="text">I am a front-end developer with more than 3 years of experience writing html, css, and js. I'm motivated, result-focused and seeking a successful team-oriented company with opportunity to grow. <a href="/login">link</a>
+                    <div class="name">Commonwealth Bank Austrilia</div>
+           <div class="text">I am a junior Devops Engineer  with more than 8 month of experience in tools like Terraform , git, aws, jenkins,kubernetes, docker,linux,git-lab. I'm motivated, result-focused and seeking a successful team-oriented company with opportunity to grow. <a href="/login">link</a>
            </div>
          </div>
        </div>
@@ -99,7 +94,7 @@
        <div class="skills">
          <div class="skills__item">
            <div class="left"><div class="name">
-             Javascript
+             Terraform
              </div></div>
            <div class="right">
                           <input  id="ck1" type="checkbox" checked/>
@@ -122,7 +117,7 @@
        </div>
        <div class="skills__item">
            <div class="left"><div class="name">
-             CSS</div></div>
+             AWS</div></div>
            <div class="right">
                           <input  id="ck1" type="checkbox" checked/>
 
@@ -148,7 +143,7 @@
        </div>
        <div class="section__list">
          <div class="section__list-item">
-                  Football, programming.
+                  Cricket,Movies,song
           </div>
        </div>
      </div>
