--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="about">
       <span class="position">Mainframe Operations</span>
       <span class="desc">
-        Mainframe Operator with the experience of around 1.8yrs in Mainframe Console monitoring and management and Batch cycle support. Ready to learn and apply new skills, looking for an challenging position in a progressive organization that will provide me an opportunity to learn new skills, which helps in my personal and professional growth. 
+        Mainframe Operator with the experience of around 1.8 years in Mainframe Console monitoring and management and Batch cycle support. Ready to learn and apply new skills, looking for an challenging position in a progressive organization that will provide me an opportunity to learn new skills, which helps in my personal and professional growth. 
       </span>
     </div>
   </div>
